apps/grimmory/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grimmory
  namespace: books
  labels:
    app: grimmory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grimmory
  template:
    metadata:
      labels:
        app: grimmory
    spec:
      containers:
        - name: grimmory
          image: ghcr.io/grimmory-tools/grimmory:v3.4.1
          ports:
            - containerPort: 6060
          volumeMounts:
            - mountPath: /app/data
              name: data
            - mountPath: /books
              name: books
            - mountPath: /bookdrop
              name: bookdrop
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grimmory-data
        - name: books
          persistentVolumeClaim:
            claimName: books
        - name: bookdrop
          persistentVolumeClaim:
            claimName: grimmory-bookdrop
